--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 <body>
     <header>
         <h1>Organic Suite</h1>
-        <div class="subtitle">Empowering Organic Solutions for a Sustainable Future</div>
+        <div class="subtitle">Making the user-experience better</div>
     </header>
     <main>
         <section>
             <h2>Welcome!</h2>
             <p>
-                Welcome to <b>Organic Suite</b>—your one-stop solution for modern, organic, and sustainable living tools.
-                Whether you're looking for resources, guides, apps, or eco-friendly advice, you’ll find it here.
+                Welcome to <b>Organic Suite</b>—your one-stop solution for no ads or tracking browsing.
+                Whether you're looking for amazon, youtube, google, or more, you’ll find it here.
             </p>
             <a href="#about" class="cta">Learn More</a>
         </section>
@@ -90,17 +90,17 @@
         <section id="about">
             <h2>About This Project</h2>
             <p>
-                <strong>Organic Suite</strong> is an open source project designed to empower individuals, organizations, and communities to practice sustainability and embrace organic solutions. 
+                <strong>Organic Suite</strong> is an open source project designed to empower individuals, organizations, and communities to back down on ads and tracking.
                 <br><br>
                 This repository contains a suite of tools and resources, including:
             </p>
             <ul>
-                <li>Guides and resources for organic sustainable living</li>
-                <li>Sample applications and utilities for eco-friendly practices</li>
-                <li>Integration samples for various platforms and needs</li>
+                <li>amazon without sponsors</li>
+                <li>youtube without ads</li>
+                <li>google without sponsors</li>
             </ul>
             <p>
-                Explore the suite, contribute, and join us in building a greener future!
+                Explore the suite, and have the best browsing experience that you ever had!
             </p>
         </section>
     </main>
