Update link text and href in index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 Welcome to <b>Organic Suite</b>—your one-stop solution for no ads or tracking browsing.
                 Whether you're looking for amazon, youtube, google, or more, you’ll find it here.
             </p>
-            <a href="#about" class="cta">Learn More</a>
+            <a href="Products" class="cta">See all products</a>
         </section>
 
         <section id="about">
