--- a/Products.html
+++ b/Products.html
@@ -11,13 +11,13 @@
       background-color: #f4f4f4;
       color: #203030;
     }
-    header {
-      background: #83b735;
-      color: #fff;
-      padding: 2rem 1rem 1rem 1rem;
+    .banner {
+      background-color: #83b735;
+      color: white;
+      padding: 40px 20px;
       text-align: center;
     }
-    h1 {
+    .banner h1 {
       margin: 0;
       font-size: 2.5rem;
       letter-spacing: 1px;
@@ -53,12 +53,14 @@
   </style>
 </head>
 <body>
-  <h1>Organic Suite Products</h1>
+  <div class="banner">
+    <h1>Organic Suite Products</h1>
+  </div>
   <div class="card-container">
-    <a href="Amazon.html" class="card-link">
+    <a href="AdBlocker.html" class="card-link">
       <div class="card">
-        <div class="card-title">Amazon Organic</div>
-        <div>Remove all amazon basics and sponsors for a ad-free experience.</div>
+        <div class="card-title">Ad Blocker</div>
+        <div>Remove unwanted ads from your browsing experience.</div>
       </div>
     </a>
     <a href="PrivacySuite.html" class="card-link">
