--- a/Products.html
+++ b/Products.html
@@ -63,16 +63,16 @@
         <div>Remove Amazon basics and sponsors from your Amazon experience.</div>
       </div>
     </a>
-    <a href="PrivacySuite.html" class="card-link">
+    <a href="Google.html" class="card-link">
       <div class="card">
-        <div class="card-title">Privacy Suite</div>
-        <div>Enhance your privacy and block trackers.</div>
+        <div class="card-title">Google Organic</div>
+        <div>Enhance your Google experience with this privacy-driven tool.</div>
       </div>
     </a>
-    <a href="SpeedBoost.html" class="card-link">
+    <a href="Youtube.html" class="card-link">
       <div class="card">
-        <div class="card-title">Speed Boost</div>
-        <div>Optimize your browsing speed and efficiency.</div>
+        <div class="card-title">Youtube Organic</div>
+        <div>Ad-free youtube with speed and efficiency in mind.</div>
       </div>
     </a>
   </div>
